# meshopt

./: CMakeLists.txt  LICENSE  README.md
src/: main.cpp  vec.c  vec.h  vecutil.c  vecutil.h
src/gnilk/engine/: FaceHelper.hpp  Mesh.hpp
src/gnilk/engine/core/: Core.hpp  Edge.hpp  FaceGroup.hpp  Triangle.hpp
src/gnilk/formats/: Wavefront.hpp
